Completed the basic setup of the Dispatch

--- a/TestSuite/test-output/index.html
+++ b/TestSuite/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-ParallelMethodsSuite" class="navigator-link">
-              <span class="suite-name border-passed">ParallelMethodsSuite</span>
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-ParallelMethodsSuite" class="navigator-link ">
-                    <span>D:\Stuff\eclipse\Programs\GTMTMAutomation\GTMTMAutomation.zip_expanded\GTMTMAutomation\TestSuite\ParallelLogintestng.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--1902108993\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-ParallelMethodsSuite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-ParallelMethodsSuite" class="navigator-link ">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-ParallelMethodsSuite" class="navigator-link ">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-ParallelMethodsSuite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-ParallelMethodsSuite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-ParallelMethodsSuite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -97,21 +97,21 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-ParallelMethodsSuite" class="hide-methods passed suite-ParallelMethodsSuite"> (hide)</a> <!-- hide-methods passed suite-ParallelMethodsSuite -->
-                      <a href="#" panel-name="suite-ParallelMethodsSuite" class="show-methods passed suite-ParallelMethodsSuite"> (show)</a> <!-- show-methods passed suite-ParallelMethodsSuite -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-ParallelMethodsSuite">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParallelMethodsSuite" title="GTMTM.TestSuite.testClasses.MicrosoftLoginTest" class="method navigator-link" hash-for-method="microsoftDispatchLoginTest">microsoftDispatchLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="GTMTM.TestSuite.testClasses.DispatchPortalTest" class="method navigator-link" hash-for-method="dispatchLoginTest">dispatchLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParallelMethodsSuite" title="GTMTM.TestSuite.testClasses.MicrosoftLoginTest" class="method navigator-link" hash-for-method="microsoftSpicePortalLoginTest">microsoftSpicePortalLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="GTMTM.TestSuite.testClasses.DispatchPortalTest" class="method navigator-link" hash-for-method="dispatchNavigationTest">dispatchNavigationTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-ParallelMethodsSuite -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -122,76 +122,81 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-ParallelMethodsSuite" class="panel ParallelMethodsSuite">
-          <div class="suite-ParallelMethodsSuite-class-passed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">GTMTM.TestSuite.testClasses.MicrosoftLoginTest</span>
+              <span class="class-name">GTMTM.TestSuite.testClasses.DispatchPortalTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="microsoftDispatchLoginTest">
-                  </a> <!-- microsoftDispatchLoginTest -->
-                  <span class="method-name">microsoftDispatchLoginTest</span>
+                  <a name="dispatchLoginTest">
+                  </a> <!-- dispatchLoginTest -->
+                  <span class="method-name">dispatchLoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="microsoftSpicePortalLoginTest">
-                  </a> <!-- microsoftSpicePortalLoginTest -->
-                  <span class="method-name">microsoftSpicePortalLoginTest</span>
+                  <a name="dispatchNavigationTest">
+                  </a> <!-- dispatchNavigationTest -->
+                  <span class="method-name">dispatchNavigationTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-ParallelMethodsSuite-class-passed -->
-        </div> <!-- panel ParallelMethodsSuite -->
-        <div panel-name="test-xml-ParallelMethodsSuite" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Stuff\eclipse\Programs\GTMTMAutomation\GTMTMAutomation.zip_expanded\GTMTMAutomation\TestSuite\ParallelLogintestng.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--1902108993\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;2&quot; parallel=&quot;methods&quot; name=&quot;ParallelMethodsSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;2&quot; parallel=&quot;methods&quot; name=&quot;MicrosoftLoginParallelTest&quot;&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;GTMTM.TestSuite.testClasses.MicrosoftLoginTest&quot;/&gt;
+      &lt;class name=&quot;GTMTM.TestSuite.testClasses.DispatchPortalTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;dispatchNavigationTest&quot;/&gt;
+          &lt;include name=&quot;dispatchLoginTest&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- GTMTM.TestSuite.testClasses.DispatchPortalTest --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- MicrosoftLoginParallelTest --&gt;
-&lt;/suite&gt; &lt;!-- ParallelMethodsSuite --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-ParallelMethodsSuite" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for ParallelMethodsSuite</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">MicrosoftLoginParallelTest (1 class)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-ParallelMethodsSuite" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for ParallelMethodsSuite</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-ParallelMethodsSuite" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for ParallelMethodsSuite</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_ParallelMethodsSuite');
-function tableData_ParallelMethodsSuite() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -199,68 +204,68 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'microsoftSpicePortalLoginTest')
-data.setCell(0, 2, 'GTMTM.TestSuite.testClasses.MicrosoftLoginTest')
-data.setCell(0, 3, 5336);
+data.setCell(0, 1, 'dispatchLoginTest')
+data.setCell(0, 2, 'GTMTM.TestSuite.testClasses.DispatchPortalTest')
+data.setCell(0, 3, 54705);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'microsoftDispatchLoginTest')
-data.setCell(1, 2, 'GTMTM.TestSuite.testClasses.MicrosoftLoginTest')
-data.setCell(1, 3, 5073);
-window.suiteTableData['ParallelMethodsSuite']= { tableData: data, tableDiv: 'times-div-ParallelMethodsSuite'}
+data.setCell(1, 1, 'dispatchNavigationTest')
+data.setCell(1, 2, 'GTMTM.TestSuite.testClasses.DispatchPortalTest')
+data.setCell(1, 3, 5926);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
-              <div id="times-div-ParallelMethodsSuite">
-              </div> <!-- times-div-ParallelMethodsSuite -->
+              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-ParallelMethodsSuite" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for ParallelMethodsSuite</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-ParallelMethodsSuite" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-ParallelMethodsSuite" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">GTMTM.TestSuite.testClasses.MicrosoftLoginTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">initializeDriver(chrome)</span>
+              <div class="chronological-class-name">GTMTM.TestSuite.testClasses.DispatchPortalTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">initializeDriver(edge)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              </div> <!-- configuration-class before -->
               <div class="configuration-method before">
-                <span class="method-name">initializeDriver(chrome)</span>
-                <span class="method-start">1 ms</span>
+                <span class="method-name">setupDispatch</span>
+                <span class="method-start">2950 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">microsoftDispatchLoginTest</span>
-                <span class="method-start">1120 ms</span>
+                <span class="method-name">dispatchLoginTest</span>
+                <span class="method-start">2964 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setupDispatch</span>
+                <span class="method-start">57680 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">microsoftSpicePortalLoginTest</span>
-                <span class="method-start">1120 ms</span>
+                <span class="method-name">dispatchNavigationTest</span>
+                <span class="method-start">57681 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
+              <div class="configuration-class after">
                 <span class="method-name">quitDriver</span>
-                <span class="method-start">6195 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">quitDriver</span>
-                <span class="method-start">6457 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">63609 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
