--- a/TestSuite/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestSuite/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e965f5">  <td>25/04/10 11:56:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.intializeDriver(java.lang.String)[pri:0, instance:GTMTM.TestSuite.testClasses.MicrosoftLoginTest@5e600dd5]">&gt;&gt;intializeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241529534</td>   <td></td> </tr>
-<tr bgcolor="97b078">  <td>25/04/10 11:56:36</td>   <td>1384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MicrosoftLoginTest.microsoftLoginTest()[pri:0, instance:GTMTM.TestSuite.testClasses.MicrosoftLoginTest@5e600dd5]">microsoftLoginTest</td> 
-  <td>main@1241529534</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>25/04/10 16:40:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DispatchPortalTest.dispatchLoginTest()[pri:0, instance:GTMTM.TestSuite.testClasses.DispatchPortalTest@1cd201a8]">dispatchLoginTest</td> 
+  <td>main@727860268</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>25/04/10 16:41:09</td>   <td>54718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DispatchPortalTest.dispatchNavigationTest()[pri:0, instance:GTMTM.TestSuite.testClasses.DispatchPortalTest@1cd201a8]">dispatchNavigationTest</td> 
+  <td>main@727860268</td>   <td></td> </tr>
+<tr bgcolor="aad5d5">  <td>25/04/10 16:40:11</td>   <td>-2955</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GTMTMBasePage.initializeDriver(java.lang.String)[pri:0, instance:GTMTM.TestSuite.testClasses.DispatchPortalTest@1cd201a8]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@727860268</td>   <td></td> </tr>
+<tr bgcolor="aad5d5">  <td>25/04/10 16:41:15</td>   <td>60646</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GTMTMBasePage.quitDriver()[pri:0, instance:GTMTM.TestSuite.testClasses.DispatchPortalTest@1cd201a8]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@727860268</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>25/04/10 16:41:09</td>   <td>54718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DispatchPortalTest.setupDispatch()[pri:0, instance:GTMTM.TestSuite.testClasses.DispatchPortalTest@1cd201a8]">&gt;&gt;setupDispatch</td> 
+<td>&nbsp;</td>  <td>main@727860268</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>25/04/10 16:41:09</td>   <td>54718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DispatchPortalTest.setupDispatch()[pri:0, instance:GTMTM.TestSuite.testClasses.DispatchPortalTest@1cd201a8]">&gt;&gt;setupDispatch</td> 
+<td>&nbsp;</td>  <td>main@727860268</td>   <td></td> </tr>
 </table>
