--- a/TestSuite/test-output/emailable-report.html
+++ b/TestSuite/test-output/emailable-report.html
@@ -8,12 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">ParallelMethodsSuite</th></tr>
-<tr><td><a href="#t0">MicrosoftLoginParallelTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,566</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">64,886</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ParallelMethodsSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MicrosoftLoginParallelTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">GTMTM.TestSuite.testClasses.MicrosoftLoginTest</td><td><a href="#m0">microsoftDispatchLoginTest</a></td><td rowspan="1">1744269389503</td><td rowspan="1">5073</td></tr><tr class="passedeven"><td><a href="#m1">microsoftSpicePortalLoginTest</a></td><td rowspan="1">1744269389503</td><td rowspan="1">5336</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">GTMTM.TestSuite.testClasses.DispatchPortalTest</td><td><a href="#m0">dispatchLoginTest</a></td><td rowspan="1">1744283414489</td><td rowspan="1">54705</td></tr><tr class="passedeven"><td><a href="#m1">dispatchNavigationTest</a></td><td rowspan="1">1744283469206</td><td rowspan="1">5926</td></tr></tbody>
 </table>
-<h2>MicrosoftLoginParallelTest</h2><h3 id="m0">GTMTM.TestSuite.testClasses.MicrosoftLoginTest#microsoftDispatchLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">GTMTM.TestSuite.testClasses.MicrosoftLoginTest#microsoftSpicePortalLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">GTMTM.TestSuite.testClasses.DispatchPortalTest#dispatchLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">GTMTM.TestSuite.testClasses.DispatchPortalTest#dispatchNavigationTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
