--- a/TestSuite/test-output/old/Default suite/classes.html
+++ b/TestSuite/test-output/old/Default suite/classes.html
@@ -4,29 +4,41 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>GTMTM.TestSuite.testClasses.MicrosoftLoginTest</td>
+<td>GTMTM.TestSuite.testClasses.DispatchPortalTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>microsoftLoginTest</td>
+<td>dispatchLoginTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dispatchNavigationTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>intializeDriver</td>
+<td>initializeDriver</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>setupDispatch</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>quitDriver</td>
+<td>&nbsp;</td></tr>
 </table>
