Completed the signout test method

--- a/TestSuite/test-output/index.html
+++ b/TestSuite/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--1902108993\testng-customsuite.xml</span>
+                    <span>C:\Users\kiran.k\AppData\Local\Temp\testng-eclipse-475373444\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -148,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--1902108993\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\kiran.k\AppData\Local\Temp\testng-eclipse-475373444\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -159,8 +159,8 @@
     &lt;classes&gt;
       &lt;class name=&quot;GTMTM.TestSuite.testClasses.DispatchPortalTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;dispatchNavigationTest&quot;/&gt;
           &lt;include name=&quot;dispatchLoginTest&quot;/&gt;
+          &lt;include name=&quot;dispatchNavigationTest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- GTMTM.TestSuite.testClasses.DispatchPortalTest --&gt;
     &lt;/classes&gt;
@@ -206,16 +206,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'dispatchLoginTest')
 data.setCell(0, 2, 'GTMTM.TestSuite.testClasses.DispatchPortalTest')
-data.setCell(0, 3, 54705);
+data.setCell(0, 3, 23651);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'dispatchNavigationTest')
 data.setCell(1, 2, 'GTMTM.TestSuite.testClasses.DispatchPortalTest')
-data.setCell(1, 3, 5926);
+data.setCell(1, 3, 2780);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -230,9 +230,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">GTMTM.TestSuite.testClasses.DispatchPortalTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">signOutTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -248,23 +255,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">setupDispatch</span>
-                <span class="method-start">2950 ms</span>
+                <span class="method-start">2989 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">dispatchLoginTest</span>
-                <span class="method-start">2964 ms</span>
+                <span class="method-start">3010 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setupDispatch</span>
-                <span class="method-start">57680 ms</span>
+                <span class="method-start">26668 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">dispatchNavigationTest</span>
-                <span class="method-start">57681 ms</span>
+                <span class="method-start">26669 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">quitDriver</span>
-                <span class="method-start">63609 ms</span>
+                <span class="method-start">29453 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
