--- a/TestSuite/test-output/old/Default suite/classes.html
+++ b/TestSuite/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>signOutTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>dispatchLoginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
